<resources>
    <string name="app_name">Fitri App</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="page_skill">Fitri Skill</string>
    <string name="page_about_me">About Me</string>

    <string name="language_spoken"><b>Language Spoken</b>\n\n \u25CB Bahasa Melayu (97%)\n \u25CB English Language (80%)\n \u25CB Mandarin (50%)</string>
    <string name="soft_skill"><b>Soft Skill</b>\n\n \u25CB Good management time\n \u25CB Critical thinking\n \u25CB Openness to criticism</string>
    <string name="programming_language"><b>Programming Language</b>\n\n \u25CB JAVA \u25CB HTML \u25CB CSS \u25CB C++ \n \u25CB Phyton \u25CB JavaScript</string>
    <string name="profile_person">\u25CB MUHAMMAD AMIRUL FITRI BIN SIDIK\n\u25CB 21 years old</string>
    <string name="description_person">Currently enrolled in a multimedia degree programme. Not only am I gaining knowledge in that degree, but I am also interested in learning UI/UX design as a hobby. I have also done some mobile design with the Figma software. My unique experience and creative mindset enable me to travel far</string>
    <string name="description_volley">Started to play when 14 years old. Playing as Defensive Specialists and sometimes as Middle Blocker.</string>
    <string name="description_badminton">Started to play when 9 years old. Play with my siblings as to spend time with them.</string>
    <string name="description_takraw">One of favourite sport. Have a role as feeder. Started to play when 12 years old.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>