<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SkillFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/textSkil1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soft_skill"
                    android:fontFamily="@font/architects_daughter"
                    android:padding="15dp"
                    android:textColor="#717171"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/textSkil2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/programming_language"
                    android:fontFamily="@font/architects_daughter"
                    android:padding="15dp"
                    android:textColor="#717171"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <TextView
                    android:id="@+id/textSkil3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language_spoken"
                    android:fontFamily="@font/architects_daughter"
                    android:padding="15dp"
                    android:textColor="#717171"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>