<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HobbyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:contentPadding="15dp">

            <LinearLayout
                android:id="@+id/layout_volley"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/volleyball"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/volley"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="VolleyBall"
                        android:padding="25dp"
                        android:textColor="#717171"
                        android:textSize="17dp"
                        android:fontFamily="@font/architects_daughter"
                        android:textStyle="bold"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/volley_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_volley"
                    android:fontFamily="@font/architects_daughter"
                    android:visibility="gone"
                    android:textColor="#717171"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:contentPadding="15dp">

            <LinearLayout
                android:id="@+id/layout_badminton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/shuttlecock"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/badminton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Badminton"
                        android:padding="25dp"
                        android:textSize="17dp"
                        android:fontFamily="@font/architects_daughter"
                        android:textColor="#717171"
                        android:textStyle="bold"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/badminton_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_badminton"
                    android:fontFamily="@font/architects_daughter"
                    android:visibility="gone"
                    android:textColor="#717171"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:contentPadding="15dp">

            <LinearLayout
                android:id="@+id/layout_takraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/sepak_takraw"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:id="@+id/takraw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sepak Takraw"
                        android:padding="25dp"
                        android:textSize="17dp"
                        android:fontFamily="@font/architects_daughter"
                        android:textColor="#717171"
                        android:textStyle="bold"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/takraw_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_takraw"
                    android:fontFamily="@font/architects_daughter"
                    android:visibility="gone"
                    android:textColor="#717171"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>